# url-webpage-autotest

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: autotest_agent.py  scraper_agent.py  state.py
backend/app/agents/nodes/: __init__.py  common.py  execute_selectors.py  fetch_page.py  gen_selectors.py  llm_extract.py  plan_extraction.py  structure_dom.py  validate_result.py
backend/app/agents/utils/: subprocess_code_execute.py
backend/app/api/v1/: __init__.py  batches.py  scrape.py  tasks.py
backend/app/controller/: url_test.py
backend/app/core/: config.py  db.py  exceptions.py  logging.py
backend/app/models/: orm.py  schemas.py
backend/app/repository/: __init__.py  batch_repo.py  selector_cache_repo.py  task_repo.py
backend/app/services/: batch_service.py  case_analysis_service.py  code_execution_service.py  code_generation_service.py  dom_service.py  export_service.py  fetch_service.py
backend/app/services/extraction/: __init__.py  cache.py  executor.py  llm_extractor.py  models.py  planner.py  result.py  selector_gen.py  validator.py
backend/app/services/llm/: __init__.py  client.py  json_utils.py  usage.py
backend/app/services/llm_service/: README.md  __init__.py  claude_service.py  cohere_service.py  config.py  gemini_service.py  langchain_service.py  (+3 more)
backend/tests/: conftest.py
backend/tests/integration/: test_batch.py  test_graph.py
backend/tests/unit/: test_dom_service.py  test_executor.py  test_extraction_services.py  test_json_utils.py  test_llm_usage.py  test_persistence.py  test_response_builder.py  test_schema_migration.py  test_selector_cache.py  test_validator.py
(+22 files in other folders)
