[project]
name = "webpage-scraper-agent"
version = "0.1.0"
description = "LLM agent that extracts user-specified content from webpages as structured data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",  # DashScope via OpenAI-compatible endpoint (default provider)
    "langchain-anthropic>=0.2",  # alternative provider
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pandas>=2.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# Extra LLM providers, wired in when app.services.llm.build_chat_model grows past these
providers = [
    "langchain-google-genai",
    "langchain-cohere",
    "langchain-ollama",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Legacy modules pending the P1 rework (see docs/REFACTOR_PLAN.md); remove as they are migrated
extend-exclude = [
    "app/services/case_analysis_service.py",
    "app/services/code_generation_service.py",
    "app/services/llm_service",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
ignore_missing_imports = true
